RESOLVED FIXED173967
REGRESSION(r215347): NAS4Free Pop-down menus fail to appear
https://bugs.webkit.org/show_bug.cgi?id=173967
Summary REGRESSION(r215347): NAS4Free Pop-down menus fail to appear
Antti Koivisto
Reported 2017-06-29 06:24:35 PDT
Visibility change on non-composited layer should trigger layer geometry update.
Attachments
patch (3.96 KB, patch)
2017-06-29 06:33 PDT, Antti Koivisto
kling: review+
patch (5.74 KB, patch)
2017-06-29 07:02 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-06-29 06:25:07 PDT
Antti Koivisto
Comment 2 2017-06-29 06:33:39 PDT
Andreas Kling
Comment 3 2017-06-29 06:42:55 PDT
Comment on attachment 314130 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=314130&action=review r=me > Source/WebCore/ChangeLog:3 > + NAS4Free Pop-down menus take 3 seconds to appear Maybe you could tell us a bit more about this? Since you brought it up, I mean.. If you hadn't, I would have accepted the patch as-is. > Source/WebCore/ChangeLog:16 > + Trigger compositing update for non-composited layers on visibility change. Like you suggested on IRC, it would be nice to factor these checks out into a helper function.
Antti Koivisto
Comment 4 2017-06-29 07:02:09 PDT
Simon Fraser (smfr)
Comment 5 2017-06-29 08:15:09 PDT
Comment on attachment 314132 [details] patch Looks OK.
WebKit Commit Bot
Comment 6 2017-06-29 09:10:14 PDT
Comment on attachment 314132 [details] patch Clearing flags on attachment: 314132 Committed r218925: <http://trac.webkit.org/changeset/218925>
WebKit Commit Bot
Comment 7 2017-06-29 09:10:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.