Source/WebCore: REGRESSION(r215347): NAS4Free Pop-down menus fail to appear https://bugs.webkit.org/show_bug.cgi?id=173967 <rdar://problem/32690114>

Reviewed by Andreas Kling.

Menus on this configuration page operate by mutating visibility. We fail to trigger required
compositing updates when visibility changes on non-composited layer. Visibility of a non-composited
descendant may affect geometry of the composited ancestor layer.

Test: compositing/backing/non-composited-visibility-change.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::layerStyleChanged):
(WebCore::RenderLayerCompositor::needsCompositingUpdateForStyleChangeOnNonCompositedLayer): Added.

    Trigger compositing update for non-composited layers on visibility change.
    Factor tests into function.

* rendering/RenderLayerCompositor.h:

LayoutTests:
NAS4Free Pop-down menus take 3 seconds to appear
https://bugs.webkit.org/show_bug.cgi?id=173967
<rdar://problem/32690114>

Reviewed by Andreas Kling.

* compositing/backing/non-composited-visibility-change-expected.html: Added.
* compositing/backing/non-composited-visibility-change.html: Added.


Canonical link: https://commits.webkit.org/190801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218925 268f45cc-cd09-0410-ab3c-d52691b4dbfc